--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,9 @@
-a {
-    text-decoration: none;
-    color: #6ab47b;
+/**********************************
+GENERAL
+***********************************/
+
+body {
+    font-family: "Open Sans", sans-serif;
 }
 
 #wrapper {
@@ -9,54 +12,34 @@ a {
     padding: 0 5%;
 }
 
-#logo {
-    text-align: center;
-    margin: 0;
+a {
+    text-decoration: none;
 }
 
-footer {
-    font-size: 0.75em;
-    text-align: center;
-    clear: both;
-
-    padding: 50px 0 0;
-    color: #ccc;
+img {
+    max-width: 100%;
 }
 
-#gallery {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+h3 {
+    margin: 0 0 1em 0;
 }
 
-#gallery li {
-    float: left;
-    margin: 2.5%;
-    width: 45%;
-    background-color: #f4f5f5;
-    color: #bdc3c7;
-}
-
-#gallery li a p {
-    margin: 0;
-    padding: 5%;
-    font-size: 0.75em;
-    color: #bdc3c7;
-}
+/**********************************
+  HEADING
+  ***********************************/
 
 header {
-    background: #6ab47b;
-    border-color: #599a68;
     float: left;
     margin: 0 0 30px 0;
     padding: 5px 0 0 0;
     width: 100%;
 }
 
-h1,
-h2 {
-    color: #fff;
+#logo {
+    text-align: center;
+    margin: 0;
 }
+
 h1 {
     font-family: "Changa One", sans-serif;
     margin: 15px 0;
@@ -71,31 +54,16 @@ h2 {
     font-weight: normal;
 }
 
-h3 {
-    margin: 0 0 1em 0;
-}
+/**********************************
+  NAVIGATION
+  ***********************************/
 
-img {
-    max-width: 100%;
-}
 nav {
-    background-color: #599a68;
     text-align: center;
     padding: 10px 0;
     margin: 20px 0 0;
 }
 
-nav a,
-nav a:visited {
-    color: white;
-    font-weight: 800;
-    padding: 15px 40px;
-}
-
-nav a.selected,
-nav a:hover {
-    color: #32673f;
-}
 nav ul {
     list-style: none;
     margin: 0 10px;
@@ -106,26 +74,83 @@ nav li {
     display: inline-block;
 }
 
+nav a {
+    font-weight: 800;
+    padding: 15px 10px;
+}
+
+/**********************************
+  FOOTER
+  ***********************************/
+
+footer {
+    font-size: 0.75em;
+    text-align: center;
+    clear: both;
+    padding-top: 50px;
+    color: #ccc;
+}
+
+.social-icon {
+    width: 20px;
+    height: 20px;
+    margin: 0 5px;
+}
+
+/**********************************
+  PAGE: PORTFOLIO
+  ***********************************/
+
+#gallery {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+}
+
+#gallery li {
+    float: left;
+    width: 45%;
+    margin: 2.5%;
+    background-color: #f5f5f5;
+    color: #bdc3c7;
+}
+
+#gallery li a p {
+    margin: 0;
+    padding: 5%;
+    font-size: 0.75em;
+    color: #bdc3c7;
+}
+
+/**********************************
+  PAGE: ABOUT
+  ***********************************/
+
 .profile-photo {
     display: block;
-    max-width: 250px;
+    max-width: 150px;
     margin: 0 auto 30px;
-    border-radius: 50%;
+    border-radius: 100%;
 }
+
+/**********************************
+  PAGE: CONTACT
+  ***********************************/
 
 .contact-info {
     list-style: none;
-    font-size: 0.9em;
     padding: 0;
     margin: 0;
+    font-size: 0.9em;
 }
 
 .contact-info a {
     display: block;
-    padding: 0 0 0 30px;
-    background-repeat: no-repeat;
     min-height: 20px;
+    background-repeat: no-repeat;
     background-size: 20px 20px;
+    padding: 0 0 0 30px;
+    /* margin: 0 0 10px 100px; */
 }
 
 .contact-info li.phone a {
@@ -139,13 +164,47 @@ nav li {
 .contact-info li.twitter a {
     background-image: url("../img/twitter.png");
 }
-.social-icon {
-    width: 5%;
-    height: 5%;
-    margin: 0 5px;
-}
+
+/**********************************
+  COLORS
+  ***********************************/
+
+/* site body */
 body {
-    background-color: white;
+    background-color: #fff;
     color: #999;
-    font-family: "Open Sans", sans-serif;
+}
+
+/* green header */
+header {
+    background: #6ab47b;
+    border-color: #599a68;
+}
+
+/* nav background on mobile */
+nav {
+    background: #599a68;
+}
+
+/* logo text */
+h1,
+h2 {
+    color: #fff;
+}
+
+/* links */
+a {
+    color: #6ab47b;
+}
+
+/* nav link */
+nav a,
+nav a:visited {
+    color: #fff;
+}
+
+/* selected nav link */
+nav a.selected,
+nav a:hover {
+    color: #32673f;
 }
