--- a/css/responsive.css
+++ b/css/responsive.css
@@ -24,7 +24,46 @@
     #gallery li:nth-child(4n) {
         clear: left;
     }
+
+    /**********************************
+    PAGE: ABOUT
+    ***********************************/
+    .profile-photo {
+        float: left;
+        margin: 0 5% 80px 0;
+        padding: 30px 0;
+        display: block;
+    }
 }
 
 @media screen and (min-width: 660px) {
+    /**********************************
+    HEADER
+    ***********************************/
+    nav {
+        background: none;
+        float: right;
+        font-size: 1.15em;
+        margin: 20px 5% 0 0;
+        text-align: right;
+        width: 45%;
+    }
+
+    #logo {
+        float: left;
+        margin: 0 0 0 5%;
+        text-align: left;
+        width: 45%;
+    }
+    h1 {
+        font-size: 2.5em;
+    }
+    h2 {
+        font-size: 0.85em;
+        margin-bottom: 20px;
+    }
+    header {
+        border-bottom: #599a68 5px solid;
+        margin-bottom: 60px;
+    }
 }
